--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,10 +37,22 @@ body {
 
 .bg-login {
     background-color: var(--background);
-    background-image: url('/assets/background_1.png'); /* put image in /public/images */
+    background-image: url('/assets/background_1.png');
     background-repeat: repeat;
-    background-size: contain;
+    background-size: 100%;
     background-position: center;
+}
+@media (min-width: 768px) {
+    .bg-login {
+        background-size: 50%;
+        background-position: left;
+    }
+}
+
+@media (min-width: 1024px) {
+    .bg-login {
+        background-size: 33.3%
+    }
 }
 
 .shadow-dance-text {
