--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
     --background: #933DA7;
     --foreground: #171717;
     --primary: #933DA7;
-    --secondary: #DDF3CA;
+    --secondary: #F7F7F7;
     --terciary: #EFBBF5;
     --light-text: #F7F7F7;
 
@@ -35,25 +35,49 @@ body {
     background-color: var(--background);
 }
 
-.bg-login {
+.bg-primary {
     background-color: var(--background);
+}
+.bg-secondary {
+    background-color: var(--light-text);
+}
+.bg-primary::before {
+    content: '';
+    position: absolute;
+    inset: 0;
     background-image: url('/assets/background_1.png');
     background-repeat: repeat;
     background-size: 100%;
     background-position: center;
+    opacity: 0.2;
+    z-index: 0;
+    pointer-events: none;
 }
+
+.bg-primary > * {
+    position: relative;
+    z-index: 1;
+}
+/* Responsive */
 @media (min-width: 768px) {
-    .bg-login {
+    .bg-primary {
+        background-size: 50%;
+        background-position: left;
+    }
+    .bg-primary::before {
         background-size: 50%;
         background-position: left;
     }
 }
-
 @media (min-width: 1024px) {
-    .bg-login {
-        background-size: 33.3%
+    .bg-primary {
+        background-size: 33.3%;
+    }
+    .bg-primary::before {
+        background-size: 33.3%;
     }
 }
+
 
 .shadow-dance-text {
     transition: all 0.5s;
