--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,13 +7,17 @@
     --secondary: #F7F7F7;
     --terciary: #EFBBF5;
     --light-text: #F7F7F7;
-
+    --dark-text: #171717;
 }
 
 body {
     background: var(--background);
     color: var(--light-text);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.text-black {
+    color: var(--dark-text) !important;
 }
 
 .text-title {
@@ -41,7 +45,10 @@ body {
 .bg-secondary {
     background-color: var(--light-text);
 }
-.bg-primary::before {
+.bg-primary-main {
+    background-color: var(--background);
+}
+.bg-primary-main::before {
     content: '';
     position: absolute;
     inset: 0;
@@ -49,7 +56,7 @@ body {
     background-repeat: repeat;
     background-size: 100%;
     background-position: center;
-    opacity: 0.2;
+    opacity: 0.05;
     z-index: 0;
     pointer-events: none;
 }
