--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,7 @@ body {
 }
 
 .bg-background {
-    background-color: var(--background);
+    background-color: var(--secondary);
 }
 
 .bg-primary {
