--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,15 @@
 
 body {
     color: var(--light-text);
+    background-color: var(--primary);
+    background-image: url('/assets/background_10.png');
+    background-repeat: repeat;
+    background-size: 100%;
+}
+
+.white-background {
+    background-color: #f4f4f4 !important;
+    background-image: url('/assets/background_10.png');
 }
 
 .text-black {
