--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,10 +48,15 @@ body {
     background-repeat: repeat;
     background-size: 100%;
 }
-
+p, h1, h2, h3, h4, h5, h6 {
+    color: var(--dark-text);
+}
 .white-background {
     background-color: #f4f4f4 !important;
     background-image: url('/assets/background_10.png');
+}
+.light-background {
+    background-color: #f4f4f4 !important;
 }
 
 .text-black {
@@ -120,7 +125,12 @@ body {
     font-family: "Meta", sans-serif;
     animation: shadow-dance 3s forwards;
 }
-
+.event-img {
+    width: 50% !important;
+    height: auto;
+    border-radius: var(--radius);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 @keyframes shadow-dance {
     0% {
         text-shadow: 0 0 0 #07bccc,
