--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,7 +46,7 @@ body {
     background-color: var(--primary);
     background-image: url('/assets/background_10.png');
     background-repeat: repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 p, h1, h2, h3, h4, h5, h6 {
     color: var(--dark-text);
@@ -54,6 +54,7 @@ p, h1, h2, h3, h4, h5, h6 {
 .white-background {
     background-color: #f4f4f4 !important;
     background-image: url('/assets/background_10.png');
+    background-size: cover;
 }
 .light-background {
     background-color: #f4f4f4 !important;
@@ -93,7 +94,7 @@ p, h1, h2, h3, h4, h5, h6 {
     inset: 0;
     background-image: url('/assets/background_10.png');
     background-repeat: repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 /* Responsive */
