--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,6 +98,13 @@ p, h1, h2, h3, h4, h5, h6 {
     background-size: cover;
 }
 
+.text-base {
+    color: var(--dark-text) !important;
+}
+.text-primary{
+    color: var(--primary) !important;
+}
+
 /* Responsive */
 @media (min-width: 768px) {
     .bg-primary {
